# ElCanarioRegionales

./: .gitignore  .pdm.toml  404.html  Modelos-elCanario.drawio  README.md  commands.txt  diagram_dessing.drawio  diagram_models.drawio  diagram_templates.drawio  esquema.drawio  ideas.md  index.html  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
DOCUMENTATION/: ToDo.md  check.md  diagram_models.mmd  diagram_templates.drawio  ideas.md  images.md  pasos.md  readme_eng.md  readme_esp.md
DOCUMENTATION/Diagrams/: Header_diagram.mmd  diagram_categories.drawio  diagram_customers.drawio  diagram_models.drawio  diagram_models_ultimate.drawio  diagram_orders.drawio  ejemploClasesPorMermaid.mmd  models_diagram.dot
DOCUMENTATION/UpdateView+HTMX/: diagram_UpdateView_htmx.drawio  goals.md
DOCUMENTATION/diagrams/: diagram_customers.drawio  diagram_dessing.drawio
DOCUMENTATION/diagrams (Conflicto de mayúsculas y minúsculas)/: Header_diagram.mmd  articles_diagram.mmd  diagram_customers.drawio
README-ES/: index.html
articles/: article_model_relationships.mmd  index.html
commands/: commands.txt  copypastecommand.txt
customers/: index.html
docs/: README-ES.md  index.md
docs/articles/: article_model_relationships.mmd  index.md
docs/customers/: index.md
docs/messageslog/: index.md
docs/orders/: index.md
docs_old/: check.md  images.md  readme_eng.md
elCanario/: ToDo.md  db.sqlite3  manage.py  requirements.txt  serviceworker.js
elCanario/_core/: urls.py  views.py
elCanario/articles/: admin.py  autodb.py  models.py  tests.py  urls.py  utils.py  views.py  views_old.py
elCanario/articles/migrations/: 0001_initial.py  0002_dollargraph_alter_article_options_and_more.py  0003_alter_dollargraph_date.py  0004_alter_dollargraph_options.py  0005_delete_dollargraph.py  0006_remove_order_article_id_remove_order_customer_id_and_more.py  0007_delete_expense.py  0008_article_stock_delete_stock.py  0009_article_image.py  0010_alter_article_image_alter_article_stock.py  0011_alter_article_name.py
elCanario/articles/templatetags/: custom_filters.py  custom_tags.py
elCanario/auth/: config.py
elCanario/authentication/: admin.py  models.py  utils.py  views.py
elCanario/authentication/migrations/: 0001_initial.py  0002_customuser_delete_user.py  0003_userprofileextends_delete_customuser.py  0004_alter_userprofileextends_profile_picture.py  0005_alter_userprofileextends_profile_picture.py  0006_alter_userprofileextends_profile_picture.py  (+2 more)
elCanario/customers/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
elCanario/dollar/: admin.py  apps.py  models.py  tasks.py  views.py
elCanario/elCanario/: asgi.py  autodb.py  settings.py  urls.py  utils.py  wsgi.py
elCanario/expenses/: admin.py  models.py
elCanario/messages/: models.py
elCanario/messageslog/: admin.py  apps.py  models.py  signals.py  tests.py
elCanario/orders/: admin.py  form.py  models.py  urls.py  utils.py  views.py
elCanario/productos/: admin.py  models.py  urls.py  views.py
elCanario/settings/: urls.py  views.py
messageslog/: index.html
orders/: index.html
(+249 files in other folders)
