[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Federico Vega - HP", email = "federico_Vega22@hotmail.com"},
    {name = "Federico Vega",email = "federico_vega22@hotmail.com"},
]
dependencies = [
    "django>=4.2.4",
    "django-pwa>=1.1.0",
    "apscheduler>=3.10.4",
    "requests>=2.31.0",
    "aiohttp>=3.8.5",
    "Pillow>=10.0.0",
    "django-widget-tweaks>=1.5.0",
    "slippers>=0.6.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
makemigrations = "elCanario/manage.py makemigrations"
migrate = "elCanario/manage.py migrate"
createsuperuser = "python elCanario/manage.py createsuperuser --username='admin' --email='ioseph.dev@gmail.com'"
server = "elCanario/manage.py runserver"
collect = "elCanario/manage.py collectstatic"
tail = "npx tailwindcss -o elCanario/articles/static/css/tailwind.css --watch"