[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Federico Vega", email = "federico_vega22@hotmail.com"},
]
dependencies = [
    "django>=4.2.6",
    "django-allauth>=0.58.1",
    "django-pwa>=1.1.0",
    "django-widget-tweaks>=1.5.0",
    "slippers>=0.6.2",
    "Pillow>=10.1.0",
    "pytz>=2023.3.post1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
makemigrations = "elCanario/manage.py makemigrations"
migrate = "elCanario/manage.py migrate"
createsuperuser = "python elCanario/manage.py createsuperuser --username='admin' --email='ioseph.dev@gmail.com'"
server = "elCanario/manage.py runserver"
collect = "elCanario/manage.py collectstatic"
tail = "npx tailwindcss -i elCanario/elCanario/staticfiles/css/input.css -o elCanario/elCanario/staticfiles/css/output.css --watch"
test = "elCanario/manage.py test"

[tool.pdm.dev-dependencies]
dev = [
    "django-rosetta>=0.9.9",
]
